# iree

./: .mergify.yml  404.html  CMakeLists.txt  index.html  sitemap.xml
.github/scripts/: resolve_conflicts.py
.github/workflows/: ci.yml  claude.yml  create-backport-issue.yml  lint.yml  pkgci.yml  pkgci_test_amd_mi355.yml  resolve-backport-conflicts.yml
building-from-source/: index.html
building-from-source/android/: index.html
building-from-source/getting-started/: index.html
building-from-source/ios/: index.html
building-from-source/riscv/: index.html
community/: index.html
community/blog/: index.html
community/blog/2021-07-19-tflite-support-via-tosa/: index.html
community/blog/2021-10-13-matrix-multiplication-with-mmt4d/: index.html
community/blog/2021-10-15-cuda-backend/: index.html
community/blog/2024-01-22-exploring-cpu-microkernels-on-a-matmul-example/: index.html
community/blog/2024-01-29-iree-mlir-linalg-tutorial/: index.html
community/tags/: index.html
compiler/src/iree/compiler/LLMAssist/: CMakeLists.txt  LLMAssistedTransformPass.cpp  Passes.cpp  Passes.h  Passes.td
compiler/src/iree/compiler/LLMAssist/Backend/: IREEBackend.cpp  IREEBackend.h  LLMBackend.cpp  LLMBackend.h  OllamaBackend.cpp  OllamaBackend.h
compiler/src/iree/compiler/LLMAssist/IR/: IRParser.cpp  IRParser.h  IRSerializer.cpp  IRSerializer.h
compiler/src/iree/compiler/LLMAssist/KVCache/: KVCacheManager.cpp  KVCacheManager.h
compiler/src/iree/compiler/LLMAssist/Prompt/: PromptBuilder.cpp  PromptBuilder.h
compiler/src/iree/compiler/LLMAssist/Tokenizer/: BPETokenizer.cpp  BPETokenizer.h  SentencePieceTokenizer.cpp  Tokenizer.cpp  Tokenizer.h
compiler/src/iree/compiler/LLMAssist/test/: CMakeLists.txt  llm_assisted_transform.mlir  llm_iree_backend.mlir  llm_iree_backend_dry_run.mlir  llm_prompt_dryrun.mlir  llm_transform_e2e.mlir  run_iree_backend_test.sh
compiler/src/iree/compiler/LLMAssist/unittests/: BPETokenizerTest.cpp  CMakeLists.txt  IREEBackendTest.cpp  IRParserTest.cpp  IRSerializerTest.cpp  KVCacheManagerTest.cpp  PromptBuilderTest.cpp
developers/: index.html
developers/building/bazel/: index.html
developers/building/cmake-options/: index.html
developers/building/cmake-with-ccache/: index.html
developers/building/emscripten/: index.html
developers/debugging/android-with-lldb/: index.html
developers/debugging/compile-time-regressions/: index.html
developers/debugging/gpu/: index.html
developers/debugging/integration-tests/: index.html
developers/debugging/model-development/: index.html
developers/debugging/releases/: index.html
developers/debugging/sanitizers/: index.html
developers/design-docs/cuda-hal-driver/: index.html
developers/design-docs/design-roadmap/: index.html
developers/design-docs/function-abi/: index.html
developers/design-docs/hip-hal-driver/: index.html
developers/design-docs/invocation-execution-model/: index.html
developers/design-docs/metal-hal-driver/: index.html
developers/design-docs/vm/: index.html
developers/general/contributing/: index.html
developers/general/developer-overview/: index.html
developers/general/developer-tips/: index.html
developers/general/github-actions/: index.html
developers/general/release-management/: index.html
developers/general/testing-guide/: index.html
developers/general/versioning-scheme/: index.html
developers/performance/benchmarking/: index.html
developers/performance/profiling/: index.html
developers/performance/profiling-cpu-events/: index.html
developers/performance/profiling-gpu-vulkan/: index.html
developers/performance/profiling-with-tracy/: index.html
developers/usage-best-practices/: index.html
developers/vulkan-environment-setup/: index.html
docs/: encoding_dispatch_region_changes.md
docs/design/: LLMAssistedPass.md
guides/: index.html
guides/deployment-configurations/: index.html
guides/deployment-configurations/bare-metal/: index.html
guides/deployment-configurations/cpu/: index.html
guides/deployment-configurations/gpu-cuda/: index.html
guides/deployment-configurations/gpu-metal/: index.html
guides/deployment-configurations/gpu-rocm/: index.html
guides/deployment-configurations/gpu-vulkan/: index.html
guides/ml-frameworks/: index.html
guides/ml-frameworks/jax/: index.html
guides/ml-frameworks/onnx/: index.html
guides/ml-frameworks/pytorch/: index.html
guides/ml-frameworks/tensorflow/: index.html
guides/ml-frameworks/tflite/: index.html
guides/parameters/: index.html
reference/: index.html
reference/bindings/: index.html
reference/bindings/c-api/: index.html
reference/bindings/python/: index.html
reference/extensions/: index.html
reference/glossary/: index.html
reference/mlir-dialects/: index.html
reference/mlir-dialects/Check/: index.html
reference/mlir-dialects/Encoding/: index.html
reference/optimization-options/: index.html
reference/tuning/: index.html
search/: search_index.json
tools/scripts/: benchmark_tinyllama.py  export_hf_llm.py  export_llm_contiguous_cache.py  export_llm_fixed.py  export_llm_for_compiler.py  export_llm_sharktank_flash.py  export_llm_simple.py  export_paged_llm_fixed.py  export_simple_llm.py  export_tinyllama_full.py  export_tinyllama_incremental.py  export_tinyllama_kvcache.py  export_tinyllama_simple.py  test_iree_backend_integration.py  test_iree_llm_backend.py  test_llm_generation.py  validate_llm_contiguous.py  validate_llm_flash.py  validate_llm_hf.py  validate_llm_simple.py  validate_tinyllama_full.py  validate_tinyllama_incremental.py  validate_tinyllama_kvcache.py  validate_tinyllama_simple.py
(+163 files in other folders)
